update to Java named module, Gradle 6.4.1, rewrite of gradle plugin, many API simplifications, more tests